--- a/docker/prod/env/.data.env
+++ b/docker/prod/env/.data.env
@@ -1,12 +1,12 @@
 # your superuser email
-SUPERUSER_EMAIL
+SUPERUSER_EMAIL=misha_gorelov@mail.ru
 # your superuser password
-SUPERUSER_PASSWORD
+SUPERUSER_PASSWORD=StayavayfrommyW977
 # project title
-MICROSERVICE_TITLE
+MICROSERVICE_TITLE=Solvery_project
 
 API_KEY_HEADER=X-HTTP-KEY
-API_KEY=3sgyqgmW.SftRAyxMLuuJdulTqrewFGUYLmqnWUJh
+API_KEY=3sgyqgmW.SftRAyxMLuuJdulTqrewFGUYLmqnWUWW
 
 HEALTH_CHECK_URL=/application/health/
 
