--- a/docker/prod/env/.data.env
+++ b/docker/prod/env/.data.env
@@ -7,6 +7,8 @@ MICROSERVICE_TITLE=Solvery_project
 
 API_KEY_HEADER=X-HTTP-KEY
 API_KEY=3sgyqgmW.SftRAyxMLuuJdulTqrewFGUYLmqnWUWW
+BLOG_API_KEY=3sgyqgmW.SftRAyxMLuuJdulTqrewFGUYLmqnWUJh
+BLOG_API_URL=http://blog:8000
 
 HEALTH_CHECK_URL=/application/health/
 
